<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/activity_text1" />

    <Button
        android:id="@+id/activitySwitch"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="210dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="12dp"
        android:text="@string/btn_text1" />

    <Button
        android:id="@+id/dialog"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="210dp"
        android:text="@string/btn_text2" />

</RelativeLayout>